web/book/tests/documentation/snapshots/documentation__book__reference__syntax__strings__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\nselect {\n  other   = '\"hello world\"',\n  escaped = \"\\\"hello world\\\"\",\n  triple  = \"\"\"I said \"hello world\"!\"\"\",\n}\n"
---
SELECT
  '"hello world"' AS other,
  '"hello world"' AS escaped,
  'I said "hello world"!' AS triple
FROM
  artists

